# cd-lab-el

./: .gitignore  AGENTS.md  CMakeLists.txt  DEMO.md  DESIGN.md  README.md  build.sh  run.sh
.github/workflows/: benchmarks.yml  ci.yml  evaluate.yml
benchmarks/: matmul.c  sort_bench.c
docs/: EVALUATION.md  EXPLANATION.md  IMPLEMENTATION.md
scripts/: compare_perf.sh  evaluate.sh
src/: FunctionProfiler.cpp  runtime.c  runtime.h
tests/: test1.c  test2.c  test3.c  test4.c  test5.c  test6.c
